# pac-superman

./: .gitignore  CMakeLists.txt  README.md  drawing.c  engine.c  engine.h  example_sprite.c  example_sprite.h  main.c  references.md  sprite.c  sprite.h  test.c  vector2.c  vector2.h
assets/: colliders_dict.tcd
assets/maps/: classic.csv  classic.gobj  lovezju.csv  lovezju.gobj  pacghost.csv  pacghost.gobj  peppa_pig.csv  peppa_pig.gobj  test.csv
docs/: Doxyfile
docs/html/: animator_8h.html  animator_8h.js  animator_8h_source.html  annotated.html  annotated_dup.js  button_8h.html  button_8h.js  button_8h_source.html  class_sprite.html  classes.html  collider_8h.html  collider_8h.js  collider_8h_source.html  colors_8h_source.html  controller_8h.html  controller_8h.js  controller_8h_source.html  dir_08bb120665109797b5051b9ad871a2ef.html  dir_08bb120665109797b5051b9ad871a2ef.js  dir_1788f8309b1a812dcb800a185471cf6c.html  dir_1788f8309b1a812dcb800a185471cf6c.js  dir_18b7cbd64894ab3853314e9eb7a6c424.html  dir_18b7cbd64894ab3853314e9eb7a6c424.js  dir_583c452e78604b986805927f24c840e3.html  dir_8367176b04b4ab0df31b7711ecc468dd.html  dir_8367176b04b4ab0df31b7711ecc468dd.js  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_996f45160da62e1a3d7f6046fad68f51.html  (+93 more)
engine/: animator.c  animator.h  assets.c  assets.h  autonav.c  autonav.h  collider.c  collider.h  controller.c  controller.h  engine.c  engine.h  scene.c  scene.h  sprite.c  sprite.h  sprites_list.c  sprites_list.h
libgraphics/: extgraph.h  genlib.h  graphics.c  graphics.h
scenes/: about_scene.c  about_scene.h  game_RankingList_scene.c  game_RankingList_scene.h  game_controller.c  game_controller.h  game_home_scene.c  game_home_scene.h  game_instruction_scene.c  game_instruction_scene.h  game_level_scene.c  game_level_scene.h  game_ranking_list_scene.c  game_ranking_list_scene.h  game_scene.c  game_scene.h  test_scene.c
sprites/: autonav_route_sprite.c  autonav_route_sprite.h  eagle_sprite.c  eagle_sprite.h  example_animated_sprite.c  example_animated_sprite.h  example_bitmap_sprite.c  example_bitmap_sprite.h  example_collidable_sprite.c  example_collidable_sprite.h  example_controllable_sprite.c  example_controllable_sprite.h  example_sprite.c  example_sprite.h  ghost.h  ghost_blinky_sprite.c  ghost_blinky_sprite.h  ghost_clyde_sprite.c  ghost_clyde_sprite.h  ghost_inky_sprite.c  ghost_inky_sprite.h  ghost_pinky_sprite.c  ghost_pinky_sprite.h  ghost_sprite.c  ghost_sprite.h  map_sprite.c  map_sprite.h  pacman_sprite.c  pacman_sprite.h  pellet.c  pellet.h  pellet_sprite.c  power_pellet_sprite.c  power_pellet_sprite.h  walls.c  walls.h
ui/: button.c  button.h  end_game_box.c  end_game_box.h  game_menu.c  game_menu.h  hp.c  hp.h  image.c  image.h  imgui.c  imgui.h  menu.c  menu.h  pause_button.c  pause_button.h  rank_display.c  rank_display.h  score.c  score.h  style.h  textbox.c  textbox.h
utils/: binary_heap.c  binary_heap.h  colors.c  colors.h  drawing.c  drawing.h  dynamic_array.c  dynamic_array.h  events.c  events.h  exceptions.c  linked_list.c  linked_list.h  vector2.c  vector2.h
(+46 files in other folders)
